@@ -5,6 +5,9 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2004-02-11 Marc Delisle  <lem9@users.sourceforge.net>
+    * server_privileges.php: bug 818654, password not copied
+
 2004-02-08 Marc Delisle  <lem9@users.sourceforge.net>
     * lang/spanish: Updated, thanks to Daniel Hinostroza (hinostroza).
     * lang/norwegian:  Updated, thanks to Sven-Erik Andersen (sven-erik).
